# sopra-db-erloesrechnung-rosenheim

./: .gitignore  README.md  app.py  main.py  pyproject.toml
repositories/: dbo_T_CUSTOMER.csv  dbo_V_LIST_MONTHLY_COSTS.csv  dbo_V_LIST_MONTHLY_SALES.csv  demo_data.py  erp_repo.py
services/: db_calculation_service.py
